Fixed spacing

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -23,7 +23,7 @@ nav {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 70px;
+  height: 3rem;
   padding: 0.3rem 0;
   z-index: 1; }
 
@@ -42,7 +42,7 @@ nav {
             justify-content: center; }
   #navbar li {
     margin: 0 1rem;
-    padding: 1rem;
+    padding: 0.33rem 1rem;
     font-size: 1.5rem; }
 
 .container {
@@ -117,7 +117,7 @@ div .row {
   -webkit-flex-direction: row;
       -ms-flex-direction: row;
           flex-direction: row;
-  padding: 10px; }
+  padding: 15px 60px; }
 
 div .item--one {
   -webkit-flex: 1 1 auto;
@@ -125,7 +125,7 @@ div .item--one {
           flex: 1 1 auto;
   max-width: 33%;
   border-radius: 5px;
-  margin: 10px;
+  margin: 15px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1); }
   div .item--one:hover {
@@ -139,7 +139,7 @@ div .item--two {
           flex: 1 1 auto;
   max-width: 33%;
   border-radius: 5px;
-  margin: 5px;
+  margin: 15px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1); }
   div .item--two:hover {
@@ -153,7 +153,7 @@ div .item--three {
           flex: 1 1 auto;
   max-width: 33%;
   border-radius: 10px;
-  margin: 10px;
+  margin: 15px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1); }
   div .item--three:hover {
